# daily-challenge

./: .dockerignore  .env.example  .env.test.example  .gitignore  Cargo.toml  Dockerfile  compose.yml  fly.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
.sqlx/: query-10ce7b2e50d56510963d5746f14c1d33cc703b4d3d5f650afb9c460e25d6c1cd.json
crates/api/: Cargo.toml
crates/api/.sqlx/: query-09a3194720f905637397a0d3135805c3a8e061baabda3d0018197035ce5e630a.json  query-0d12d80042463d8180bd583138db878dc1b9efb57e6fb53762fbbec3ff57d5d2.json  query-16690c510634f6cf72e774ac5fc00d67bd0e06f0852512c0e620695cd0764d9c.json  query-1ca494ba734f818b1fcc68bc5b4e9582b8a65615f80d6e63012038f2bbfdc753.json  query-2649a344b94e97d3b63acd76f1d72b9963ffb8c1f808395a6df441ddc9027c05.json  query-26be08b9e25882ab06e405dd27ff9a9cdfe13fc8aa8bd6f68b1b87753d14042e.json  query-449a800af618f6b366fc4df6e46d2c7da3b0c2a3b7946ec2a6d5e2b029464717.json  query-628eebd1e8a86a4ea8f1a5aa00dba15b1b619a60379151acc35271697b743e14.json  query-86a2aba13f359b55ecfd682dab13eff20e6dabd3b6af834042d96bc9a044c042.json  query-a8186f8a20a1d628bf19d97211dab98e7de45097707654879a89a07983331cdf.json  query-b2e681fb68d6ec8c46910b3de3d0df1cda43864ce00d85f43a2610be0425abc5.json  query-bc6ad92cbd2129b766a630eb9c9f2d6d8be2e37b6a45dfde6b53f2af5396ecc6.json  query-c21849510505e565d9c179d4eda0d50113769c026c1fdae4e5f952b9eff39551.json
crates/api/src/: lib.rs  main.rs  routes.rs
crates/api/src/handlers/: auth.rs  challenge.rs  code_output.rs  games.rs  health.rs  leaderboard.rs  mod.rs  trivia.rs
crates/api/src/middleware/: auth.rs  csrf.rs  mod.rs
crates/api/tests/: auth_test.rs  challenge_test.rs  code_output_test.rs  health_test.rs  leaderboard_test.rs  security_test.rs  trivia_test.rs
crates/api/tests/common/: mod.rs
crates/auth/: Cargo.toml
crates/auth/src/: jwt.rs  password.rs  token.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-1f6c1c584cff2812105e9a4b354ed98c201403b47fb47f5a643fdc30c6b63509.json  query-22a886f2d23a7759fe9c6fd538852ec34fb76ebcee492e4f66a76d6c224a2c3a.json  query-294b304f6c2bca3b0816558c974afcfeefd487af29a3b30c75f0f64b42062de7.json  query-384e6077e96c0e01b255e3821302c4c7eb3f9cc7524e33e151210056f52a9027.json  query-43b6a80c76bf77894fdc3731bf7bfdf5d67a416f773f4e7efc58f4a8136a9031.json  query-46d37a9688542e3164ffdcc15de0c5ceb73a96974dc1784b2b29095123272bc6.json  query-48c8bf1334a096bd312f9ed1aeca1b5224a7fe93184a06052fc75d334acba42b.json  query-4e54ff9f418b56d124599fc65946cf59af3031b81ab394584198730cb7fdc5cd.json  query-4e8b057f68effd551819cdb6394177194e68a705db4e9a26275d901a1947d0eb.json  query-6b80ca18a47f67f0a5654cff10008d9f1a0dfc8741ab79abe671478f33eb6f07.json  query-741027f027d13d0f0072dc6409da8235c41482946fdf01fb22c9aaf550bfa441.json  query-80cb2107606e87f3b4f272f3fcaac5aad4b526fb72be4369b9cc04b4e912bb6e.json  query-84ae490b2395d40bb4e6d8fb3a11d656e33fab6e5588b122eec7c6cf4d9cc6d5.json  query-8a703a4111690ff0e46a50326479f46b76ac747bd8ffcb030b686eb022704499.json  query-8b08cc90612e7d82d8d789882e8cf920ef619ab7550dfeba3f3d39fe3bbb5383.json  query-94562580792cf7f0541ce06903cc68c45d14f9524f5a799a09cc7b876b10d942.json  query-98c90ee48a3793be334bf3b2e1463b0d6af90bbab8d255945ac2ceb432729018.json  query-9afd8ec3f649b4a9d0f00d43fa813fdb1e343fbe7b2f12d483349d77153a4865.json  query-ae1ba08647a53b7c9f0196c641d2bbed5f6db4b1cc04d00f837db36b7a3d63a7.json  query-af435f89fcbd66d21e59014a8fc28e3594ce12191bd6e3ba3ea9585a9e820cb7.json  query-be39c1b6466a9dadda6c72eb3a4500d0aa9e7a350e8d1855070b8a9ccbdfa3ec.json  query-c03b6a493aefb2a2eab549a32ebf4ad13981c77260f47321467e724bc38fe16c.json  query-ccffe29a26165eaf8b943535ca318453027e55797cfa653aae16c48aeb77dfd2.json  query-d11dc504121858e92213af484d325c77b2d67e06a56e925f5de59bf9ddfb465d.json  query-d19a4ca8d7957967e87b5b5259394a15a0ebf7bb53fb82e8a57ae7d3bc6827eb.json  query-d43b8d6232d89219c4704b6e81881cab1e9d90498f534b326a850fa64a2534bc.json  query-f2094a5a18fa2ef52497e4f2c966574cba2f5ac97ae034de5d120d9a856dcdc8.json
crates/db/src/: connection.rs  models.rs  queries.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  code-output.ts  games.ts  (+2 more)
migrations/: 001_create_users.sql  005_create_refresh_tokens.sql  007_rename_to_trivia.sql  008_create_games_registry.sql  009_create_code_output_game.sql
scripts/: reset.sh  seed.sh  seed_code_output.sql  seed_trivia.sql
(+21 files in other folders)
