[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Internal crates
shared = { path = "crates/shared" }
db = { path = "crates/db" }


# External crates
argon2 = "0.5"
axum = "0.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.19", features = ["derive"] }
