[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Internal crates
shared = { path = "crates/shared" }
db = { path = "crates/db" }
auth = { path = "crates/auth" }

# External crates
argon2 = "0.5"
axum = "0.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "trace",
    "set-header",
    "sensitive-headers",
    "fs",
] }
tower_governor = { version = "0.8", features = ["axum", "tracing"] }
governor = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "fmt",
] }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.19", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde_json = "1"
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package.argon2]
opt-level = 3

[profile.test.package.argon2]
opt-level = 3
