[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
db.workspace = true
shared.workspace = true

# External crates
dotenvy.workspace = true
tokio.workspace = true
sqlx.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
