[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
db.workspace = true
shared.workspace = true
auth.workspace = true

# External crates
axum.workspace = true
axum-extra.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
