[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
shared.workspace = true

# External crates
argon2.workspace = true
chrono.workspace = true
serde.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
getrandom.workspace = true
